# Manchester-Triage-Queue-and-Tree-

./: Arbol.cpp  Arbol.h  CMakeLists.txt  Cola.cpp  Cola.h  Emergencias.cpp  Emergencias.h  Hospital.cpp  Hospital.h  NodoArbol.h  NodoCola.cpp  NodoCola.h  NodoPila.cpp  NodoPila.h  Pacientes.cpp  Pacientes.h  Pila.cpp  Pila.h  README.md  main.cpp
